Fri Nov 17 18:04:25 UTC 2006  Ciju John  <johnc@ociweb.com>

        * DevGuideExamples/DDS/Messenger/pub_udp.ini:
        * DevGuideExamples/DDS/Messenger/sub_udp.ini:
          Add udp specific pub/sub configuration files.

        * DevGuideExamples/DDS/Messenger/run_test.pl:
          Modifications to pass transport specific options to pub/sub.

        * DevGuideExamples/DDS/Messenger/publisher.cpp:
        * DevGuideExamples/DDS/Messenger/subscriber.cpp:
          Add transport selection option.

        * DevGuideExamples/DDS/Messenger/sub.ini:
        * DevGuideExamples/DDS/Messenger/pub.ini:
          Remove dangling spaces.
Thu Nov 16 15:36:47 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * performance-tests/DCPS/SimpleE2ETest/publisher.cpp:
        * performance-tests/DCPS/SimpleE2ETest/subscriber.cpp:
        * performance-tests/DCPS/UDPListenerTest/publisher.cpp:
        * performance-tests/DCPS/UDPListenerTest/subscriber.cpp:
        * performance-tests/DCPS/UDPNoKeyTest/publisher.cpp:
        * performance-tests/DCPS/UDPNoKeyTest/subscriber.cpp:

          Switched from using std::string to const char*.  A simple const
          char* was all that was needed for the ACE_ERROR_RETURN message.

Wed Nov 15 14:07:44 UTC 2006  Yan Dai  <dai_y@ociweb.com>

        * tests\DCPS\FooTest3_0\SimpleSubscriber.cpp:
        * tests\transport\udp_simple\SimplePublisher.cpp:
        * tests\transport\udp_simple\SimpleSubscriber.cpp:
        * tests\transport\udp_simple\SimpleDataWriter.cpp:
        * tests\transport\simple\SimplePublisher.cpp:
        * tests\transport\simple\SimpleSubscriber.cpp:
        * tests\transport\simple\SimpleDataWriter.cpp:

          Added missing includes to fix compilation errors on windows.

Wed Nov 15 15:47:31 GMT 2006  Rich Seibel<seibel_r@ociweb.com>

        * tests/DCPS/FooTest3/Writer.cpp:
        * tests/DCPS/FooTest3NoKey/Writer.cpp:
        * tests/DCPS/FooTest3_1/Writer.cpp: